# ece5720-project

./: CMakeLists.txt  PROJECT.cpp  README.md  Resources.txt
.github/workflows/: cmake.yml
include/: read_csv.hpp  read_emnist.hpp  read_fashion.hpp  read_mnist.hpp
scripts/: install_cuda_ubuntu.sh
scripts/actions/: install_cuda_ubuntu.sh
src/: ann.cu
